--- a/application/spring-java/StationDemoService/pom.xml
+++ b/application/spring-java/StationDemoService/pom.xml
@@ -46,6 +46,11 @@
 			<artifactId>commons-lang3</artifactId>
 		</dependency>
 		
+		<dependency>
+    		<groupId>javax.validation</groupId>
+    		<artifactId>validation-api</artifactId>
+   		</dependency>
+		
 		<!--  Test -->
 		<dependency>
 			<groupId>junit</groupId>
