--- a/application/spring-java/StationDemoWeb/src/main/webapp/WEB-INF/web.xml
+++ b/application/spring-java/StationDemoWeb/src/main/webapp/WEB-INF/web.xml
@@ -1,10 +1,12 @@
-<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee 
-         http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
-         version="3.1">
+<web-app
+        xmlns = "https://jakarta.ee/xml/ns/jakartaee"
+        xmlns:xsi = "http://www.w3.org/2001/XMLSchema-instance"
+        xsi:schemaLocation = "https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd"
+        version = "5.0"
+        metadata-complete = "false"
+>
          
-         
+         <absolute-ordering />
          <context-param>
       		<param-name>contextClass</param-name>
       		<param-value>
@@ -53,7 +55,7 @@
 
 
 
-
+		
 
    	
 		
