--- a/application/spring-java/StationDemoWeb/src/main/resources/application.properties
+++ b/application/spring-java/StationDemoWeb/src/main/resources/application.properties
@@ -5,3 +5,5 @@ redis.usessl=false
 
 okta.issuerUrl=https://dev-884254.oktapreview.com/oauth2/default
 okta.clientId=0oaeg3yghaL9mQalz0h7
+
+security.basic.enabled=false
