--- a/application/spring-java/StationDemoWeb/pom.xml
+++ b/application/spring-java/StationDemoWeb/pom.xml
@@ -34,13 +34,15 @@
 		<dependency>
     		<groupId>org.springdoc</groupId>
     		<artifactId>springdoc-openapi-ui</artifactId>
+    		<exclusions>
+            	<exclusion>
+                	<groupId>org.slf4j</groupId>
+                	<artifactId>slf4j-api</artifactId>
+            	</exclusion>
+        	</exclusions>
  		</dependency>
 	
 		
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-		</dependency>
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-api</artifactId>
@@ -107,7 +109,7 @@
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
-			<scope>test</scope>
+			<scope>compile</scope>
 		</dependency>
 		
 		<!--  Test -->
