--- a/.github/workflows/build-repo-stationapplication.yaml
+++ b/.github/workflows/build-repo-stationapplication.yaml
@@ -84,11 +84,12 @@ jobs:
           path: current
           token: ${{ steps.get_workflow_token.outputs.token }}
 
-      - name: Set up Java 8
+      - name: Set up Java 17
         uses: actions/setup-java@v3
         with:
-          java-version: '8'
-          distribution: 'adopt'
+          distribution: 'temurin'
+          java-version: '17'
+          cache: 'maven'
 
       - name: Build Backend
         id: build_backend
