--- a/kubernetesaws/helm/awsvalue.yaml
+++ b/kubernetesaws/helm/awsvalue.yaml
@@ -19,7 +19,10 @@ app:
     vpc_cidr:  '12.0.0.0/21'
     region: 'eu-west-3' 
 
-environment: 'dev'
+  environment: 'dev'
+
+  # Apparmor : enable or disable
+  apparmor: disable
 
 image:
   tag: 1.3.1
