--- a/kubernetesaws/helm/station/templates/stationfront-deployment.yaml
+++ b/kubernetesaws/helm/station/templates/stationfront-deployment.yaml
@@ -22,6 +22,12 @@ spec:
   # nested inside the deployment spec
   template:
     metadata:
+      # AppArmor
+      {{- if (eq .Values.app.apparmor "enable")   }}
+      annotations:
+        container.apparmor.security.beta.kubernetes.io/stationfront-nginx: localhost/k8s-stationfront-nginx
+      {{- end }}
+      
       # Set labels on the pod.
       # This is used in the deployment selector.
       labels:
