--- a/.github/workflows/build-scan-stationwebfront.yaml
+++ b/.github/workflows/build-scan-stationwebfront.yaml
@@ -73,3 +73,8 @@ jobs:
         run: |
           wget https://github.com/controlplaneio/kubesec/releases/download/v2.12.0/kubesec_linux_amd64.tar.gz
           tar -xvf kubesec_linux_amd64.tar.gz 
+
+      - name: Scan template
+        id: scan-helm-template
+        run: helm template station > station.yaml && kubesec station.yaml
+        working-directory: kubernetesaws/helm
