--- a/.github/workflows/build-scan-stationwebfront.yaml
+++ b/.github/workflows/build-scan-stationwebfront.yaml
@@ -83,4 +83,4 @@ jobs:
       - name: Scan template
         id: scan-helm-template
         run: helm template station > station.yaml && kubesec station.yaml
-        working-directory: kubernetesaws/helm
+        working-directory: current/kubernetesaws/helm
