--- a/.github/workflows/build-scan-stationwebfront.yaml
+++ b/.github/workflows/build-scan-stationwebfront.yaml
@@ -73,6 +73,7 @@ jobs:
         run: |
           wget https://github.com/controlplaneio/kubesec/releases/download/v2.12.0/kubesec_linux_amd64.tar.gz
           tar -xvf kubesec_linux_amd64.tar.gz 
+          mv kubesec /usr/bin/kubesec
 
       - name: Install Helm
         run: |
@@ -82,5 +83,5 @@ jobs:
 
       - name: Scan template
         id: scan-helm-template
-        run: helm template station > station.yaml && ./kubesec station.yaml
+        run: helm template station > station.yaml && kubesec station.yaml
         working-directory: current/kubernetesaws/helm
