--- a/.github/workflows/build-scan-stationwebfront.yaml
+++ b/.github/workflows/build-scan-stationwebfront.yaml
@@ -73,8 +73,7 @@ jobs:
         run: |
           wget https://github.com/controlplaneio/kubesec/releases/download/v2.12.0/kubesec_linux_amd64.tar.gz
           tar -xvf kubesec_linux_amd64.tar.gz 
-          mv kubesec ~/.local/bin/kubesec
-
+ 
       - name: Install Helm
         run: |
           curl -fsSLo get_helm.sh https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3
@@ -83,5 +82,5 @@ jobs:
 
       - name: Scan template
         id: scan-helm-template
-        run: helm template station > station.yaml && ~/.local/bin/kubesec station.yaml
-        working-directory: current/kubernetesaws/helm
+        run: helm template current/kubernetesaws/helm/station > station.yaml && ./kubesec station.yaml
+        working-directory: 
