--- a/application/spring-java/StationDemoWeb/pom.xml
+++ b/application/spring-java/StationDemoWeb/pom.xml
@@ -18,139 +18,76 @@
 	<dependencies>
 	  
 	  	<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-web</artifactId>
-		 </dependency>
-		 <dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-webmvc</artifactId>
-		 </dependency>
-		 
-		 <dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context</artifactId>
-		 </dependency>	 
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-data-jdbc</artifactId>
+		</dependency>
+
+		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 		
 		<dependency>
     		<groupId>org.springdoc</groupId>
     		<artifactId>springdoc-openapi-ui</artifactId>
-    		<exclusions>
-            	<exclusion>
-                	<groupId>org.slf4j</groupId>
-                	<artifactId>slf4j-api</artifactId>
-            	</exclusion>
-        	</exclusions>
  		</dependency>
-	
-		
-		<dependency>
-			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-api</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-core</artifactId>
-		</dependency>
-		<dependency>
-    		<groupId>org.apache.logging.log4j</groupId>
-    		<artifactId>log4j-slf4j-impl</artifactId>
-   		</dependency>
-		
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-annotations</artifactId>
-		</dependency>
-
-		<dependency>
-        	<groupId>jakarta.servlet</groupId>
-        	<artifactId>jakarta.servlet-api</artifactId>
-        	<scope>provided</scope>
-  	    </dependency>
-		
-		<dependency>
+ 		
+ 		<dependency>
     		<groupId>javax.validation</groupId>
     		<artifactId>validation-api</artifactId>
-   		</dependency>
-   		
-   		<dependency>
-   			 <groupId>org.springframework.plugin</groupId>
-   			 <artifactId>spring-plugin-core</artifactId>
-    	</dependency>
-		<dependency>
-   			 <groupId>org.springframework.plugin</groupId>
-   			 <artifactId>spring-plugin-metadata</artifactId>
  		</dependency>
-				
-
-
-		<!--  Service -->
+ 		<dependency>
+       		<groupId>org.hibernate</groupId>
+       		<artifactId>hibernate-validator</artifactId>
+    	</dependency>
+    	
+    	<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-redis</artifactId>
+		</dependency>
 		<dependency>
-			<groupId>com.exakaconsulting.poc</groupId>
-			<artifactId>StationDemoService</artifactId>
-			<version>${project.version}</version>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+      </dependency>
+
+
+		
+		<!-- JWT   -->
+		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.okta.jwt</groupId>
+			<artifactId>okta-jwt-verifier</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.okta.jwt</groupId>
+			<artifactId>okta-jwt-verifier-impl</artifactId>
 		</dependency>
 		
-		<!--  Test -->
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-test</artifactId>
-		 </dependency>				
 		
-		<!--  H2 -->
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
-			<scope>compile</scope>
 		</dependency>
 		
-		<!--  Test -->
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-test</artifactId>
-		 </dependency>	
-		 
-		 <dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-test</artifactId>
-		</dependency>
-		 
-		 
-		 <!-- Security -->
-		 <dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-config</artifactId>
-		</dependency>		 
-		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-core</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-web</artifactId>
-		</dependency> 
-		<dependency>
-       		 	<groupId>org.hibernate</groupId>
-       			<artifactId>hibernate-validator</artifactId>
-    		</dependency>
+		
+
+	  	
 		
 		
 	</dependencies>
