--- a/application/spring-java/pom.xml
+++ b/application/spring-java/pom.xml
@@ -13,7 +13,6 @@
 	<properties>
 	   <java.version>17</java.version>
 	   <springdocopenapi.version>1.6.14</springdocopenapi.version>
-	   <log4j2.version>2.19.0</log4j2.version>
 	   <jakarta-servlet.version>6.0.0</jakarta-servlet.version>
 	   <springbatch.version>5.0.0</springbatch.version>
 	   <springboot.version>3.1.3</springboot.version>
@@ -23,7 +22,6 @@
 	   <jacoco.version>0.8.8</jacoco.version>
 	   <mockito.version>4.8.1</mockito.version>
 	   <gitflow.version>1.0-m5.1</gitflow.version>
-	   <slf4j.version>1.7.25</slf4j.version>
 	   <urlrewriterfilter.version>4.0.4</urlrewriterfilter.version>
 	   <validationapi.version>2.0.1.Final</validationapi.version>
 	   <springplugin.version>3.0.0</springplugin.version>
@@ -99,6 +97,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 			<version>${springboot.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>com.vaadin.external.google</groupId>
+					<artifactId>android-json</artifactId>			
+				</exclusion>
+			</exclusions>
 		</dependency>
 		
 		<dependency>
@@ -112,10 +116,21 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
 			<version>${springboot.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework.boot</groupId>
+    				<artifactId>spring-boot-starter-logging</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
     		<groupId>org.springframework.boot</groupId>
     		<artifactId>spring-boot-starter-data-jdbc</artifactId>
+			<version>${springboot.version}</version>
+		</dependency>
+		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-log4j2</artifactId>
 			<version>${springboot.version}</version>
 		</dependency>
 		<dependency>
