--- a/application/spring-java/StationDemoWeb/pom.xml
+++ b/application/spring-java/StationDemoWeb/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>StationDemoSecureWeb</artifactId>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<parent>
 		<groupId>com.exakaconsulting.poc</groupId>
 		<artifactId>StationDemoProject</artifactId>
@@ -103,6 +103,14 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<groupId>org.apache.maven.plugins</groupId>
 			</plugin>
+			
+			 <plugin>
+    			<groupId>org.apache.maven.plugins</groupId>
+    			<artifactId>maven-surefire-plugin</artifactId>
+ 				<configuration>
+        			<reuseForks>false</reuseForks>
+    			</configuration>
+  			 </plugin>
 
 		</plugins>
 	</build>
