--- a/application/spring-java/StationDemoWeb/src/main/resources/application.properties
+++ b/application/spring-java/StationDemoWeb/src/main/resources/application.properties
@@ -1,3 +1,13 @@
+
+
+spring.datasource.url=${DB_TRAFSTAT_URL:jdbc:h2:file:~/data/trafstats1;INIT=create schema if not exists trafstats1\\;RUNSCRIPT FROM 'classpath:db-data-h2-trafstat.sql'}
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.maxActive=7
+
+
+
 redis.hostname=localhost
 redis.port=6379
 redis.password=test55
