--- a/application/spring-java/StationDemoWeb/src/main/resources/application.properties
+++ b/application/spring-java/StationDemoWeb/src/main/resources/application.properties
@@ -1,10 +1,14 @@
 
 
+# Datasource
 spring.datasource.url=${DB_TRAFSTAT_URL:jdbc:h2:file:~/data/trafstats1;INIT=create schema if not exists trafstats1\\;RUNSCRIPT FROM 'classpath:db-data-h2-trafstat.sql'}
 spring.datasource.username=${DB_TRAFSTAT_USERNAME:sa}
 spring.datasource.password=${DB_TRAFSTAT_PASSWORD:}
 spring.datasource.driverClassName=${DB_TRAFSTAT_DRIVERCLASS:org.h2.Driver}
 spring.datasource.maxActive=${DB_TRAFSTAT_MAXACTIVE:7}
+
+# Context Path
+server.servlet.context-path=/StationDemoSecureWeb
 
 
 
