Correction spring boot

--- a/application/spring-java/StationDemoWeb/pom.xml
+++ b/application/spring-java/StationDemoWeb/pom.xml
@@ -104,6 +104,14 @@
 				<groupId>org.apache.maven.plugins</groupId>
 			</plugin>
 			
+        	<plugin>
+            	<groupId>org.springframework.boot</groupId>
+            	<artifactId>spring-boot-maven-plugin</artifactId>
+            	<configuration>    
+                	<mainClass>com.exakaconsulting.poc.Application</mainClass>
+            	</configuration>
+        	</plugin>
+        			
 			 <plugin>
     			<groupId>org.apache.maven.plugins</groupId>
     			<artifactId>maven-surefire-plugin</artifactId>
