--- a/application/spring-java/StationDemoWeb/docker/Dockerfile
+++ b/application/spring-java/StationDemoWeb/docker/Dockerfile
@@ -1,26 +1,17 @@
-FROM tomcat:10.1.5-jdk17-temurin
+FROM eclipse-temurin:17-jre
 
 LABEL application.contact = "kagzouli@exaka.com"
 
 
-RUN  groupadd -r -g 20050 tomcat && useradd -u 20050 -r -g tomcat tomcat \ 
- &&  wget -O mysql-connector-java-8.0.30.jar "https://repo1.maven.org/maven2/mysql/mysql-connector-java/8.0.30/mysql-connector-java-8.0.30.jar" \
- &&  cp mysql-connector-java-8.0.30.jar /usr/local/tomcat/lib/mysql-connector-java-8.0.30.jar \
- &&  rm -rf /usr/local/tomcat/webapps/* \
- &&  mkdir /usr/local/tomcat/webapps/ROOT \
- &&  rm -f /usr/local/tomcat/mysql-connector-java-8.0.30.jar
+RUN  groupadd -r -g 20050 exakagroup && useradd -u 20050 -r -g exakauser exakagroup \ 
 
-ADD bin-set/setenv.sh /usr/local/tomcat/bin/setenv.sh
-ADD conf/context.xml /usr/local/tomcat/conf/context.xml
-ADD conf/server.xml /usr/local/tomcat/conf/server.xml
-ADD conf/web.xml /usr/local/tomcat/conf/web.xml
 
 # Raison de sécurité - On desactive les applications par default et on met une 404.html
 COPY page/404.html /usr/local/tomcat/webapps/ROOT/404.html
-COPY StationDemoSecureWeb.war /usr/local/tomcat/webapps/StationDemoSecureWeb.war
+COPY StationDemoSecureWeb.war StationDemoSecureWeb.war
 
 # Give this directory the tomcat right
-RUN chown -R tomcat:tomcat /usr/local/tomcat
+RUN chown -R exakauser:exakagroup StationDemoSecureWeb.war
 # Run with user tomcat
-USER tomcat
+USER exakauser
 WORKDIR /usr/local/tomcat/
