--- a/kubernetesaws/helm/station/templates/stationback-deployment.yaml
+++ b/kubernetesaws/helm/station/templates/stationback-deployment.yaml
@@ -59,6 +59,8 @@ spec:
             {{ else }}
             value: {{ .Values.stationdb.jdbcDatabaseUrl | quote }}
             {{- end }}
+          - name: DB_TRAFSTAT_DRIVERCLASS
+            value: "com.mysql.jdbc.Driver"
           - name: DB_TRAFSTAT_MAXACTIVE
             value: {{ .Values.stationback.nbConnectionDbMaxActive | quote}}
           - name: DB_TRAFSTAT_USERNAME
