--- a/jenkins/deployWithDockerCompose/docker-compose.yml
+++ b/jenkins/deployWithDockerCompose/docker-compose.yml
@@ -41,6 +41,7 @@ services:
         condition: on-failure
     environment:
       - DB_TRAFSTAT_URL=jdbc:mysql://station_db:3306/StationDemoDb?connectTimeout=0
+      - DB_TRAFSTAT_DRIVERCLASS=com.mysql.jdbc.Driver
       - DB_TRAFSTAT_MAXACTIVE=100
       - DB_TRAFSTAT_USERNAME=stationuser  
       - DB_TRAFSTAT_PASSWORD=stationpwd
@@ -53,21 +54,7 @@ services:
     volumes:
       - logstationback:/usr/local/tomcat/logs
  
-  station_front_tomcat:
-    image: "${REPO_NEXUS_URL}kagzouli/station-front-tomcat:${VERSION}"
-    deploy:
-      replicas: 1
-      restart_policy:
-        condition: on-failure
-    environment:
-      - JAVA_OPTS="-agentlib:jdwp=transport=dt_socket,address=10000,server=y,suspend=n"
-    ports:
-      - "4300:8080"
-      - "10000:10000"
-    volumes:
-      - logstationtomcatfront:/usr/local/tomcat/logs
-
-  station_front_nginx:
+  station_front:
     image: "${REPO_NEXUS_URL}kagzouli/station-front-nginx:${VERSION}"
     deploy:
       replicas: 1
