Correction war en jar

--- a/application/spring-java/StationDemoWeb/docker/Dockerfile
+++ b/application/spring-java/StationDemoWeb/docker/Dockerfile
@@ -13,12 +13,12 @@ ENV REDIS_PORT "6379"
 ENV REDIS_PASS "test650"
 ENV REDIS_USESSL "false"
 
-COPY StationDemoSecureWeb.war StationDemoSecureWeb.war
+COPY StationDemoSecureWeb.jar StationDemoSecureWeb.jar
 
 RUN  groupadd -r -g 20050 exakagroup && useradd -u 20050 -r -g exakauser exakagroup \
-    chown -R exakauser:exakagroup StationDemoSecureWeb.war
+    chown -R exakauser:exakagroup StationDemoSecureWeb.jar
 
 
 # Run with user tomcat
 USER exakauser
-ENTRYPOINT ["java" , "-XX:MaxRAMPercentage=75.0" , "-XX:+UseContainerSupport" , "-jar" , "StationDemoSecureWeb.war"]
+ENTRYPOINT ["java" , "-XX:MaxRAMPercentage=75.0" , "-XX:+UseContainerSupport" , "-jar" , "StationDemoSecureWeb.jar"]
