Correction nom github action

--- a/.github/workflows/build-repo-stationapplication.yaml
+++ b/.github/workflows/build-repo-stationapplication.yaml
@@ -96,11 +96,11 @@ jobs:
         run: mvn --batch-mode --update-snapshots package
         working-directory: current/application/spring-java
  
-      - name: Upload backend WAR
-        id: upload-backendwar
+      - name: Upload backend JAR
+        id: upload-backendjar
         uses: actions/upload-artifact@v3
         with:
-          name: backendwar
+          name: backendjar
           path: current/application/spring-java/StationDemoWeb/target/StationDemoSecureWeb.jar
 
   push_back_dockerhub:
@@ -126,11 +126,11 @@ jobs:
           token: ${{ steps.get_workflow_token.outputs.token }}
 
       # Download artifact
-      - name: download backend WAR
-        id: download-backendwar
+      - name: download backend JAR
+        id: download-backendjar
         uses: actions/download-artifact@v3
         with:
-          name: backendwar
+          name: backendjar
           path: current/application/spring-java/StationDemoWeb/docker/
 
 
