--- a/jenkins/deployWithDockerCompose/docker-compose.yml
+++ b/jenkins/deployWithDockerCompose/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.2'
 
 services:
   station_db:
-    image: "${REPO_NEXUS_URL}kagzouli/station-db:${VERSION}"
+    image: "${REPO_NEXUS_URL}kagzouli3/station-db:${VERSION}"
     deploy:
       replicas: 1 
       restart_policy:
@@ -15,9 +15,6 @@ services:
       - MYSQL_DATABASE=StationDemoDb
       - MYSQL_USER=stationuser
       - MYSQL_PASSWORD=stationpwd
-    volumes:
-      - logstationdb:/var/log/mysql
-      - databasedata:/var/lib/mysql
       
   station_redis:
     image: "redis:6.0.10"
@@ -34,7 +31,7 @@ services:
     depends_on:
       - station_db
       - station_redis
-    image: "${REPO_NEXUS_URL}kagzouli/station-back:${VERSION}"
+    image: "${REPO_NEXUS_URL}kagzouli3/station-back:${VERSION}"
     deploy:
       replicas: 1
       restart_policy:
@@ -51,11 +48,11 @@ services:
       - REDIS_USESSL=false
     ports:
       - "4000:8080"
-    volumes:
-      - logstationback:/usr/local/tomcat/logs
+    #volumes:
+    #  - logstationback:/usr/local/tomcat/logs
  
   station_front:
-    image: "${REPO_NEXUS_URL}kagzouli/station-front-nginx:${VERSION}"
+    image: "${REPO_NEXUS_URL}kagzouli3/station-front-nginx:${VERSION}"
     deploy:
       replicas: 1
       restart_policy:
@@ -66,38 +63,3 @@ services:
       - CONTEXT_BACK_URL=http://51.254.36.120:4000
     ports:
         - "80:8080"
-    volumes:
-      - logstationnginxfront:/var/log/nginx/
-
-volumes:
-   databasedata:
-      driver: local 
-      driver_opts:
-        type: none
-        o: bind
-        device: ${DATABASE_DATA} 
-   logstationdb:
-      driver: local 
-      driver_opts:
-        type: none
-        o: bind
-        device: ${MY_LOGS}/stationdb
-   logstationback:
-      driver: local 
-      driver_opts:
-        type: none
-        o: bind
-        device: ${MY_LOGS}/stationback 
-   logstationtomcatfront:
-      driver: local 
-      driver_opts:
-        type: none
-        o: bind
-        device: ${MY_LOGS}/stationtomcatfront
-   logstationnginxfront:
-      driver: local 
-      driver_opts:
-        type: none
-        o: bind
-        device: ${MY_LOGS}/stationnginxfront
-
