--- a/kubernetesaws/helm/station/templates/stationfront-hpa.yaml
+++ b/kubernetesaws/helm/station/templates/stationfront-hpa.yaml
@@ -1,3 +1,4 @@
+{{- if (eq .Values.app.hscaler "hpa")   }}
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
@@ -17,3 +18,4 @@ spec:
       target:
         type: Utilization
         averageUtilization: 80
+{{- end }}
