--- a/kubernetesaws/helm/station/templates/stationback-hpa.yaml
+++ b/kubernetesaws/helm/station/templates/stationback-hpa.yaml
@@ -14,7 +14,7 @@ spec:
   metrics:
   - type: Pods
     pods:
-      metric: cpu
+      metric:
         name: http_server_requests_per_second
       target:
         type: AverageValue
