Correction mauvais hpa

--- a/kubernetesaws/helm/station/templates/stationback-hpa.yaml
+++ b/kubernetesaws/helm/station/templates/stationback-hpa.yaml
@@ -18,5 +18,5 @@ spec:
         name: http_server_requests_per_second
       target:
         type: AverageValue
-        averageUtilization: 2
+        averageValue: 2
 {{- end }}
