--- a/kubernetesaws/helm/station/templates/stationback-deployment.yaml
+++ b/kubernetesaws/helm/station/templates/stationback-deployment.yaml
@@ -30,6 +30,9 @@ spec:
       annotations:
         container.apparmor.security.beta.kubernetes.io/stationback: localhost/k8s-stationback
       {{- end }}
+        prometheus.io/path: /actuator/prometheus
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "8080"
       
       # Set labels on the pod.
       # This is used in the deployment selector.
