--- a/kubernetesaws/helm/station/templates/stationback-deployment.yaml
+++ b/kubernetesaws/helm/station/templates/stationback-deployment.yaml
@@ -30,7 +30,7 @@ spec:
       annotations:
         container.apparmor.security.beta.kubernetes.io/stationback: localhost/k8s-stationback
       {{- end }}
-        prometheus.io/path: /actuator/prometheus
+        prometheus.io/path: /StationDemoSecureWeb/actuator/prometheus
         prometheus.io/scrape: "true"
         prometheus.io/port: "8080"
       
