--- a/application/spring-java/StationDemoWeb/src/main/resources/application.properties
+++ b/application/spring-java/StationDemoWeb/src/main/resources/application.properties
@@ -19,4 +19,8 @@ redis.usessl=${REDIS_USESSL:false}
 
 okta.issuerUrl=https://dev-884254.oktapreview.com/oauth2/default
 
+# Security
 security.basic.enabled=false
+
+# Actuator
+management.endpoints.web.exposure.include=health,info,prometheus
