--- a/application/spring-java/StationDemoWeb/src/test/resources/test.properties
+++ b/application/spring-java/StationDemoWeb/src/test/resources/test.properties
@@ -1,7 +1,7 @@
 
 
 # Datasource. 
-spring.datasource.url=jdbc:h2:file:~/data/trafstats1;INIT=create schema if not exists users1\\;RUNSCRIPT FROM 'classpath:db-data-h2-trafstat-test.sql'
+spring.datasource.url=jdbc:h2:mem:trafstats1test;INIT=create schema if not exists users1\\;RUNSCRIPT FROM 'classpath:db-data-h2-trafstat-test.sql'
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driverClassName=org.h2.Driver
