--- a/kubernetesaws/helm/prometheus.yaml
+++ b/kubernetesaws/helm/prometheus.yaml
@@ -20,4 +20,4 @@ rules:
     name:
       matches: "^http_server_requests_seconds_count(.*)"
       as: "http_server_requests_seconds_count_sum"
-    metricsQuery: sum(<<.Series>>{<<.LabelMatchers>>,uri=~"/persons.*"}) by (<<.GroupBy>>)
+    metricsQuery: sum(<<.Series>>{<<.LabelMatchers>>,uri=~"/station.*"}) by (<<.GroupBy>>)
