--- a/kubernetesaws/helm/station/templates/stationback-hpa.yaml
+++ b/kubernetesaws/helm/station/templates/stationback-hpa.yaml
@@ -12,11 +12,10 @@ spec:
     kind: Rollout
     name: stationback-deploy
   metrics:
-  - type: Pods
-    pods:
-      metric:
-        name: http_server_requests_per_second
+  - type: Resource
+    resource:
+      name: cpu
       target:
-        type: AverageValue
-        averageValue: 2
+        type: Utilization
+        averageUtilization: 80
 {{- end }}
