--- a/kubernetesaws/helm/station/templates/stationback-service.yaml
+++ b/kubernetesaws/helm/station/templates/stationback-service.yaml
@@ -3,6 +3,10 @@ kind: Service
 metadata:
   name: stationbackservice 
   namespace: {{ .Release.Namespace | quote }}
+  annotations:
+    prometheus.io/path: /StationDemoSecureWeb/actuator/prometheus
+    prometheus.io/scrape: "true"
+    prometheus.io/port: "8080"
 spec:
   type: {{ .Values.stationback.service.serviceType | quote }}
   ports:
