--- a/kubernetesaws/argocd/shared/templates/shared.yaml
+++ b/kubernetesaws/argocd/shared/templates/shared.yaml
@@ -12,6 +12,8 @@ spec:
       namespace: "transverse"
     - server: "https://kubernetes.default.svc"
       namespace: "kube-system"
+    - server: "https://kubernetes.default.svc"
+      namespace: "monitoring"
   clusterResourceWhitelist:
     - group: "*"
       kind: "*"
