--- a/kubernetesaws/helm/prometheus/templates/prometheus-targetgrbin.yaml
+++ b/kubernetesaws/helm/prometheus/templates/prometheus-targetgrbin.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   serviceRef:
     name: prometheus
-    port: 80
+    port: 443
   targetGroupARN: {{ .Values.prometheus.ingress.targetGroupARN }} 
   networking:
     ingress:
@@ -15,5 +15,7 @@ spec:
         - ipBlock:
             cidr: {{ .Values.argocd.network.vpc_cidr | quote }} 
         ports:
+        - port: 443
+          protocol: TCP
         - port: 80
           protocol: TCP
