--- a/.github/workflows/deploy-eks-stationargocd-all.yaml
+++ b/.github/workflows/deploy-eks-stationargocd-all.yaml
@@ -272,6 +272,7 @@ jobs:
    
       # Check that ALB load balancer controller is in state Running, Failed 
       - name: Waiting ALB load balancer to be running
+        timeout: 30 
         id:  albloadbalancercontroller-isrunnin
         run: |
           NOTPENDING_ALB_CONTROLLER=$( kubectl get pods -n transverse -o json  | jq -r '.items[] |  select( (.metadata.name |  contains("aws-load-balancer-controller")) and (.status.phase=="Running" or .status.phase=="Failed"))' | jq -jr '.metadata | .name, ", " ')
@@ -356,7 +357,7 @@ jobs:
       - name: Change NodePort Prometheus Server
         id: prometheus-nodeport
         run: |
-          kubectl patch svc prometheus -n transverse -p '{"spec": {"type": "NodePort"}}'
+          kubectl patch svc prometheus-server -n transverse -p '{"spec": {"type": "NodePort"}}'
 
       - name: Prometheus-chart
         id: prometheus-chart
