--- a/kubernetesaws/argocd/shared/templates/prometheus.yaml
+++ b/kubernetesaws/argocd/shared/templates/prometheus.yaml
@@ -17,6 +17,10 @@ spec:
       parameters: 
         - name: server.persistentVolume.enabled
           value: "false"
+        - name: server.service.type
+          value: "NodePort"
+        - name:  server.service.nodePort
+          value: "30001"
 
     repoURL: https://prometheus-community.github.io/helm-charts
     targetRevision: 25.0.0
