--- a/kubernetesaws/helm/station/templates/stationback-keda.yaml
+++ b/kubernetesaws/helm/station/templates/stationback-keda.yaml
@@ -16,7 +16,7 @@ spec:
   triggers:
   - type: prometheus
     metadata:
-      serverAddress: http://prometheus-server.monitoring.svc
+      serverAddress: http://prometheus.exakaconsulting.org
       metricName: http_server_requests_seconds # Note: name to identify the metric, generated value would be `prometheus-http_requests_total`
       query: sum(rate(http_server_requests_seconds_count{service="stationbackservice"}[2m])) # Note: query must return a vector/scalar single element response
       threshold: '1'
