--- a/kubernetesaws/helm/values_prometheus.yaml
+++ b/kubernetesaws/helm/values_prometheus.yaml
@@ -810,10 +810,29 @@ serverFiles:
             replacement: /api/v1/nodes/$1/proxy/metrics
 
       - job_name: cadvisor
-        scrape_interval: 5s
+        kubernetes_sd_configs:
+          - role: pod  # we get needed info from the pods
+            namespaces:
+              names: 
+                - monitoring  # in namespace monitoring
+            selectors:
+              - role: pod
+                label: "app=cadvisor"  # and only select the cadvisor pods with this label set as source
+        scrape_timeout: 5s
         static_configs:
-        - targets:
-          - cadvisor:8080
+          - targets:
+            - cadvisor:8080
+        metric_relabel_configs:  # we relabel some labels inside the scraped metrics
+          # this should look at the scraped metric and replace/add the label inside
+          - source_labels: [container_label_io_kubernetes_pod_namespace]
+            replacement: '$1'
+            target_label: "namespace"
+          - source_labels: [container_label_io_kubernetes_pod_name]
+            replacement: '$1'
+            target_label: "pod"
+          - source_labels: [container_label_io_kubernetes_container_name]
+            replacement: '$1'
+            target_label: "container"
 
       - job_name: 'kubernetes-nodes-cadvisor'
 
