--- a/kubernetesaws/argocd/shared/templates/cadvisor.yaml
+++ b/kubernetesaws/argocd/shared/templates/cadvisor.yaml
@@ -1,24 +1,22 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: keda
+  name: cadvisor
   namespace: argocd
   annotations:
     argocd.argoproj.io/sync-wave: "5"
 spec:
   destination:
     server: https://kubernetes.default.svc
-    namespace: transverse
+    namespace: monitoring
   project: shared
   source:
-    chart: keda
+    chart: cadvisor
     helm:
-      releaseName: keda
-    repoURL: https://kedacore.github.io/charts
-    targetRevision: 2.12.0
+      releaseName: cadvisor
+    repoURL: https://ckotzbauer.github.io/helm-charts
+    targetRevision: 2.2.4
   syncPolicy:
     automated:
       prune: true
       selfHeal: true
-    syncOptions:
-    - ServerSideApply=true
