--- a/kubernetesaws/argocd/shared/templates/prometheus-operator-crds.yaml
+++ b/kubernetesaws/argocd/shared/templates/prometheus-operator-crds.yaml
@@ -1,24 +1,21 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: prometheus
+  name: prometheus-operator-crds
   namespace: argocd
   annotations:
-    argocd.argoproj.io/sync-wave: "6"
+    argocd.argoproj.io/sync-wave: "3"
 spec:
   destination:
     server: https://kubernetes.default.svc
     namespace: monitoring
   project: shared
   source:
-    chart: prometheus
+    chart: prometheus-operator-crds
     helm:
-      releaseName: prometheus
-      valueFiles:
-      - values_prometheus.yaml
-
+      releaseName: prometheus-operator-crds
     repoURL: https://prometheus-community.github.io/helm-charts
-    targetRevision: 25.0.0
+    targetRevision: 5.1.0
   syncPolicy:
     automated:
       prune: true
