--- a/kubernetesaws/argocd/shared/templates/shared.yaml
+++ b/kubernetesaws/argocd/shared/templates/shared.yaml
@@ -14,6 +14,8 @@ spec:
       namespace: "kube-system"
     - server: "https://kubernetes.default.svc"
       namespace: "monitoring"
+    - server: "https://kubernetes.default.svc"
+      namespace: "falco"
   clusterResourceWhitelist:
     - group: "*"
       kind: "*"
