--- a/kubernetesaws/helm/prometheus/templates/prometheus-targetgrbin.yaml
+++ b/kubernetesaws/helm/prometheus/templates/prometheus-targetgrbin.yaml
@@ -2,7 +2,7 @@ apiVersion: elbv2.k8s.aws/v1beta1
 kind: TargetGroupBinding
 metadata:
   name: prometheus-tgb
-  namespace: transverse
+  namespace: monitoring
   
 spec:
   serviceRef:
