--- a/kubernetesaws/argocd/shared/templates/prometheus-operator-crds.yaml
+++ b/kubernetesaws/argocd/shared/templates/prometheus-operator-crds.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: argocd
   annotations:
     argocd.argoproj.io/sync-wave: "3"
+    argocd.argoproj.io/sync-options: Replace=true
 spec:
   destination:
     server: https://kubernetes.default.svc
