--- a/kubernetesaws/argocd/shared/templates/calico.yaml
+++ b/kubernetesaws/argocd/shared/templates/calico.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: argocd
   annotations:
     argocd.argoproj.io/sync-wave: "5"
+    argocd.argoproj.io/sync-options: Replace=true
 spec:
   destination:
     server: https://kubernetes.default.svc
@@ -20,3 +21,6 @@ spec:
     automated:
       prune: true
       selfHeal: true
+    syncOptions:
+    - CreateNamespace=true
+    - ServerSideApply=true
