Delete automaticallt external secrets access key

--- a/.github/workflows/delete-eks-stationargocd-all.yaml
+++ b/.github/workflows/delete-eks-stationargocd-all.yaml
@@ -63,6 +63,16 @@ jobs:
 
         working-directory: kubernetesaws/argocd
 
+      - name: get Access key for user external-secrets
+        id: get-access-key-external-users
+        run: |
+          echo "::set-output name=key::$( aws iam list-access-keys --user-name external-secrets | jq -r ".AccessKeyMetadata[0].AccessKeyId")
+
+      - name: delete Access key user external-secrets
+        id: delete-access-key-external-secrets
+        run: |
+          aws iam delete-access-key --user-name external-secrets --access-key-id ${{ steps.get-access-key-external-users.outputs.key }}
+
   delete_cloudwatchalarm:
     uses: ./.github/workflows/terraform-aws-destroy-reusable.yaml
     needs: destroy_station
